# edufy

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  wrangler.toml
edufy-web/: package.json  svelte.config.js
edufy-web/src/: app.css  app.d.ts  app.html  hooks.server.ts
edufy-web/src/lib/: constants.ts
edufy-web/src/lib/components/: SEO.svelte  ScriptLoader.svelte
edufy-web/src/lib/data/: blogManager.ts
edufy-web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts
edufy-web/src/routes/about/: +page.svelte
edufy-web/src/routes/academics/: +page.server.ts
edufy-web/src/routes/admission/: +page.svelte  largecontainer2.svelte  portfolio.svelte
edufy-web/src/routes/blog/: +page.server.ts  +page.svelte
edufy-web/src/routes/blog/[slug]/: +page.server.ts  +page.svelte
edufy-web/src/routes/contact/: +page.svelte
edufy-web/src/routes/login/: +page.svelte  +page.ts
edufy-web/src/routes/portal/: +layout.svelte  +layout.ts  +page.svelte
edufy-web/src/routes/portal/admin/: +layout.svelte
edufy-web/src/routes/portal/admin/posts/: +page.server.ts  +page.svelte
edufy-web/src/routes/portfolio/: +page.svelte  smarea.svelte
edufy-web/src/routes/robots.txt/: +server.ts
edufy-web/src/routes/sitemap.xml/: +server.ts
edufy-web/src/routes/tag/[slug]/: +page.ts
edufy-web/src/types/: global.d.ts
src/: audit.rs  auth.rs  backup.rs  blog.rs  config.rs  error.rs  handlers.rs  kv.rs  lib.rs  main.rs  middleware.rs  models.rs  storage.rs
tests/: integration_tests.rs
